# Miroslav_Konchevich_153503___

Lab1_2sem/Lab1_Taska1/: Background.qrc  Ellipse.cpp  Ellipse.h  Lab1_Taska1.pro  main.cpp  myfirst.cpp  myfirst.h  myfirst.ui
Lab1_2sem/Task_5/: Task_5.pro  Task_5.pro.user.7788766  binaryoperation.cpp  binaryoperation.h  expression.cpp  expression.h  main.cpp  number.cpp  number.h  task_6.cpp
Lab1_2sem/lab1-4/: lab1-4.pro  lab1-4.pro.user.38e941d  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receipts.cpp  receipts.h
Lab1_2sem/laba1-2-new/: arbitary.cpp  arbitary.h  circle.cpp  circle.h  eightpointedstar.cpp  eightpointedstar.h  fivepointedstar.cpp  fivepointedstar.h  hexagon.cpp  hexagon.h  laba1-2-new.pro  laba1-2-new.pro.user.38e941d  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.cpp  rectangle.h  shapes.cpp  shapes.h  sixpointedstar.cpp  sixpointedstar.h  square.h  star.cpp  star.h  triangle.cpp  triangle.h
Lab1_2sem/laba1-3/: date.cpp  date.h  laba1-3.pro.user.38e941d  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab2_2sem/Task_2/: Task_2.pro.user.7788766  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab2_2sem/Task_3/: Task_3.pro  Task_3.pro.user.7788766  abitura.txt  expressionmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stack.h
Lab2_2sem/laba3-1-1/: doublelistabitura.h  (+7 more)
Lab5/TestsForLab5/Test_3/: CMakeLists.txt  main.cpp  main.h
Lab6/Lab6_1/: CMakeLists.txt  Lab6_1.cpp
Lab6/TestsForLab6/Test3/: CMakeLists.txt  main.cpp  main.h
Lab7/TestsForLab7/Test_1/: CMakeLists.txt  main.cpp  main.h
mailClient/: index.jsp
(+235 files in other folders)
